[#56743400] Fix for navigation panels z-index

--- a/app/styles/components/mobile_nav.scss
+++ b/app/styles/components/mobile_nav.scss
@@ -4,7 +4,8 @@
   position: absolute;
   background: inherit;
   left: 0;
-  padding-top:4rem;
+  z-index:1;
+  padding-top: 4em;
   min-height:100%;
   width:100%;
   -moz-box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.57);
@@ -15,6 +16,7 @@
 .search-panel{
   display:block;
   position:absolute;
+  z-index:1;
   top:0;
   left:0;
   width:100%;
@@ -25,7 +27,7 @@
   width: 100%;
   background-color: $white;
   border-bottom: 1px solid $medium-gray-border;
-  z-index: 1;
+  z-index: 2;
   position: fixed;
   top: 0;
   left: 0;
